Fixed dark mode for table header + gitlab theme

--- a/common/common.scss
+++ b/common/common.scss
@@ -604,6 +604,12 @@ p>img:not(.emoji){
     padding: 0.15em 0.6em;
 }
 
+// Fix white table header
+.md-table table thead tr {
+	background-color: revert;
+	border-top: 1px solid var(--border-default);
+}
+
 // Christmas hats
 // https://meta.discourse.org/t/christmas-hats/51846/20
 $url_of_christmas_hat_asset:'/errorpages/santa_100.png';
